--- a/src/styles/components/_column-grid-image.scss
+++ b/src/styles/components/_column-grid-image.scss
@@ -146,7 +146,7 @@
   gap: 2rem;
   
   @media (min-width: $breakpoint-sm) {
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: minmax(0, 1fr) minmax(0, 1fr);
     gap: 2rem;
   }
   
